[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Remy Duval <remy_duval@laposte.net>"]
edition = "2018"

[profile.release]
lto = 'thin'

[dependencies]
anyhow = "1.0.36"
fs-err = "2.5.0"
hashbrown = "0.9.1"
itertools = "0.9.0"
structopt = "0.3.21"
thiserror = "1.0.22"

[dependencies.num-integer]
version = "0.1.44"
features = ["i128"]
