[workspace]
members = [
    "commons",
    "year2018",
    "year2019",
    "year2020",
    "year2021"
]

[profile.release]
lto = 'thin'
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3
