[workspace]
resolver = "2"
members = [
    "commons",
    "year2018",
    "year2019",
    "year2020",
    "year2021",
    "year2022"
]

[workspace.dependencies]
itertools = "0.11.0"

[profile.release]
lto = 'thin'
strip = true
opt-level = 3
panic = 'abort'

[profile.dev]
opt-level = 0

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3
