[package]
name = "commons"
version = "0.1.0"
authors = ["Remy Duval <remy_duval@laposte.net>"]
edition = "2021"
rust-version = "1.65.0"

[dependencies]
itertools = "0.10.5"
eyre = "0.6.8"

[dependencies.clap]
version = "4.2.1"
default-features = false
features = ["std", "help", "usage", "error-context", "suggestions"]

[dependencies.num-traits]
version = "0.2.15"
features = ["std", "i128"]

[dependencies.num-integer]
version = "0.1.45"
features = ["std", "i128"]
