[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Remy Duval <remy_duval@laposte.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.36"
hashbrown = "0.9.1"
itertools = "0.9.0"
structopt = "0.3.21"
thiserror = "1.0.22"

[dependencies.commons]
path = "../commons"

[dependencies.num-integer]
version = "0.1.44"
features = ["i128"]
