[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Remy Duval <remy_duval@laposte.net>"]
edition = "2021"

[dependencies]
color-eyre = "0.5.11"
hashbrown = "0.11.2"
itertools = "0.10.1"

[dependencies.commons]
path = "../commons"

[dependencies.num-integer]
version = "0.1.44"
features = ["i128"]
